Added TODOS, and switched import paths to proper path

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea
 rayz
-rayz.iml
+*.iml
 *.ppm
 
 # Ignore all vendored packages, but not vendor.json (running `govendor sync` fetches packages listed there)
